# wordsCounting

./: .gitignore  CMakeLists.txt  README.md  config.txt  main.cpp
Common/: Common.cpp  Common.h
Config/: Config.cpp  Config.h
Consumer/: Consumer.cpp  Consumer.h
Exceptions/: ConfigExceptions.h  Exceptions.h  ReaderExceptions.h
MPMCDeque/: MPMCDeque.hpp
Producer/: Producer.cpp  Producer.h
Reader/: Reader.cpp  Reader.h
