CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(wordsCounting)

SET(CMAKE_CXX_STANDARD 11)

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -g")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")

SET(EXECUTABLE_NAME wordsCounting)
SET(DIRS_LST Common Config Consumer Exceptions MPMCDeque Reader Producer)
SET(FILES_LST main.cpp Common/Common.cpp Config/Config.cpp Consumer/Consumer.cpp Reader/Reader.cpp Producer/Producer.cpp)

FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(Threads REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${DIRS_LST})

ADD_EXECUTABLE(${EXECUTABLE_NAME} ${FILES_LST})
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
